<resources>
    <string name="app_name">여행록</string>
    <string name="main_trip">여행</string>
    <string name="main_trip_tab_plan">일정</string>
    <string name="main_trip_tab_log">기록</string>
    <string name="main_trip_plan_no_contents_title">등록된 일정이 없어요</string>
    <string name="main_trip_plan_no_contents_message">우측 상단의 버튼으로 새로운 여행을 등록할 수 있습니다.\n즐거운 여행을 시작해보세요.</string>
    <string name="main_profile">프로필</string>
    <string name="main_profile_need_sign_in">로그인이 필요해요</string>
    <string name="main_home_guest">여행자</string>
    <string name="main_home_user_name">님,</string>
    <string name="main_home_welcome">설레는 여행이 기다리고 있어요 :)</string>
    <string name="main_home_trip_day">%d 일째 여행중!</string>
    <string name="main_home_look_back">추억 톺아보기</string>
    <string name="main_home_no_contents_title">기록된 여행이 없습니다.</string>
    <string name="main_home_no_contents_message">즐거운 여행의 추억을 남겨보세요.</string>
    <string name="search_title">검색</string>
    <string name="search_search_hint">여행 키워드를 입력해보세요.</string>
    <string name="search_no_contents_title">검색 결과 없음</string>
    <string name="search_no_contents_message">나의 여행 및 기록에 대한 전체 검색이 가능합니다.\n다양한 키워드를 통해 검색해보세요.</string>
    <string name="main_more_title">더보기</string>
    <string name="main_more_profile">프로필</string>
    <string name="main_more_setting">설정</string>
    <string name="main_more_sign_out">로그아웃</string>
    <string name="main_more_withdrawal">회원탈퇴</string>
    <string name="main_more_user_title">프로필 관리</string>
    <string name="main_more_user_name">이름</string>
    <string name="main_more_user_code">초대 코드</string>
    <string name="main_more_user_account">로그인 계정</string>
    <string name="main_more_setting_app_push_title">앱 푸시 알림</string>
    <string name="main_more_setting_app_push_desc">알림을 받으려면 활성화 해주세요.</string>
    <string name="main_more_setting_notice_advertising_title">광고성 알림</string>
    <string name="main_more_setting_notice_advertising_desc">알림을 받으려면 활성화 해주세요.</string>
    <string name="main_trip_log_title">여행 기록</string>
    <string name="main_trip_log_save">저장</string>
    <string name="trip_add_description">설레는 여행을 시작할 준비가 되셨나요?\n준비가 되었다면 여행의 이름을 지어주세요.</string>
    <string name="trip_add_name_hint">여행 이름</string>
    <string name="trip_add_name_limit">* 최소 1자에서 최대 20자까지 입력 가능합니다.</string>
    <string name="trip_add_select_date">여행의 기간도 설정해주세요.</string>
    <string name="trip_check_title">준비물</string>
    <string name="trip_check_pic">담당자 : %s</string>
    <string name="trip_member_title">일행</string>
    <string name="trip_plan_period">여행기간</string>
    <string name="trip_plan_period_start">시작 날짜</string>
    <string name="trip_plan_period_end">종료 날짜</string>
    <string name="trip_plan_name">여행이름</string>
    <string name="trip_log_info_day">DAY %s</string>
    <string name="trip_account_title">가계부</string>
    <string name="trip_account_total">총 금액</string>
    <string name="trip_account_won">원</string>
    <string name="trip_album_title">사진</string>
    <string name="trip_album_no_contents">아직 저장된 사진이 없어요!\n우측 상단의 버튼을 클릭하여 여행의 추억을 남겨보세요 :)</string>
    <string name="trip_check_no_contents">여행에 필요한 준비물을 챙겨보세요.</string>
    <string name="pop_up_sign_out_title">로그아웃</string>
    <string name="pop_up_sign_out_message">로그아웃 하시겠습니까?</string>
    <string name="button_yes">예</string>
    <string name="button_no">아니오</string>
    <string name="button_ok">확인</string>
    <string name="button_cancel">취소</string>
    <string name="button_next">다음</string>
    <string name="main_home_new_trip">새로운 여행 계획하기</string>
    <string name="dialog_init_setting_info">해당 창을 닫으면 설정한 정보가 초기화됩니다.\n닫으시겠습니까?</string>
    <string name="setting_main">설정</string>
    <string name="setting_theme">테마 설정</string>
    <string name="setting_open_source">오픈 소스 라이브러리</string>
    <string name="setting_version">Version %s</string>
    <string name="theme_app_settings">시스템 설정 모드</string>
    <string name="theme_light_mode">밝은 모드</string>
    <string name="theme_dark_mode">어두운 모드</string>

    <string name="kakao_app_key">8f6abdf916b65498acf91a358491097b</string>
</resources>
