<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#ffffff"
        app:contentInsetStart="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/text_title"
                style="@style/text_sub_title"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:text="@string/main_more_user_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/view_user_profile"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:background="@drawable/background_profile_default"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.1"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_user_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_main_more"
        android:elevation="4dp"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_user_profile"
        app:layout_constraintWidth_percent="0.9"
        >

        <TextView
            android:id="@+id/text_user_name_title"
            style="@style/more_user_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/main_more_user_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/text_user_name"
            />

        <TextView
            android:id="@+id/text_user_name"
            style="@style/more_user_contents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            app:layout_constraintLeft_toRightOf="@id/barrier"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/gray_999999"
            app:layout_constraintBottom_toTopOf="@id/text_user_code_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_user_name_title"
            />

        <TextView
            android:id="@+id/text_user_code_title"
            style="@style/more_user_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/main_more_user_code"
            app:layout_constraintBottom_toBottomOf="@id/text_user_code"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/text_user_code"
            />

        <TextView
            android:id="@+id/text_user_code"
            style="@style/more_user_contents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toRightOf="@id/barrier"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_user_name"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/gray_999999"
            app:layout_constraintBottom_toTopOf="@id/text_user_account_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_user_code"
            />

        <TextView
            android:id="@+id/text_user_account_title"
            style="@style/more_user_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/main_more_user_account"
            app:layout_constraintBottom_toBottomOf="@id/text_user_account"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_user_account"
            />

        <TextView
            android:id="@+id/text_user_account"
            style="@style/more_user_contents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toRightOf="@id/barrier"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_user_code"
            />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="text_user_name_title,text_user_code_title,text_user_account_title"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>